npm/npm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: npm-service
spec:
  ports:
    # 外部访问端口
    - nodePort: 31243
      # 目标端口,主机端口
      port: 4873
      # 协议
      protocol: TCP
      # pod 内部端口
      targetPort: 4873
  selector:
    app: npm-deployment
  type: NodePort
